--- a/read.html
+++ b/read.html
@@ -1,85 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>US States Dashboard — Data Table</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css"/>
-
-  <!-- Use your existing import style -->
-  <script type="module">
-    import { renderTable } from './assets/controller.js';
-    window.addEventListener('DOMContentLoaded', renderTable);
-  </script>
-</head>
-<body>
-  <!-- Header -->
-  <header class="header">
-    <div class="container row">
-      <a class="brand-badge" href="index.html">US States Dashboard</a>
-      <nav class="nav">
-        <a class="active" href="read.html">Data Table</a>
-        <a href="create.html">Create</a>
-        <a href="update.html">Update</a>
-        <a href="delete.html">Delete</a>
-        <a href="charts.html">Charts</a>
-        <a href="about.html">About</a>
-      </nav>
-      <a class="gh-pill" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
-    </div>
-  </header>
-
-  <!-- Main -->
-  <main class="container section">
-    <div class="panel">
-      <div class="panel-inner">
-        <h3 class="m0">States</h3>
-
-        <!-- Optional quick filters (wired up inside controller.js bootTable) -->
-        <div class="form-grid mt16">
-          <div>
-            <label class="label" for="q">Search</label>
-            <input id="q" class="input" placeholder="Search by name, capital, or code…"/>
-          </div>
-          <div>
-            <label class="label" for="filter-region">Region</label>
-            <select id="filter-region" class="input">
-              <option value="">All regions</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="table-wrap mt16">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Capital</th>
-                <th>Population</th>
-                <th>GDP (USD)</th>
-                <th>Area (km²)</th>
-                <th>Cities</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <!-- NOTE: ID must be 'states-body' to match the controller -->
-            <tbody id="states-body"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="container footer">
-    <span>© 2025 US States Dashboard</span>
-    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
-  </footer>
-
-  <!-- (Optional) Botpress embed -->
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
-</body>
-</html>
+<!doctype html>
+<meta http-equiv="refresh" content="0; url=data.html">
+<title>Redirecting…</title>
