--- a/update.html
+++ b/update.html
@@ -59,5 +59,9 @@
     <span>© 2025 US States Dashboard</span>
     <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
   </footer>
+
+  <!-- Botpress -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
