--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
     <div class="panel mt24"><div class="panel-inner">
       <span class="badge">External Insights</span>
-      <p class="mt8">These metrics reflect your local dataset (stored in your browser). Add or edit states and totals update instantly.</p>
+      <p class="mt8">Latest USA stats from <span id="ext-source">—</span>:</p>
+      <ul class="mt8">
+        <li>USA GDP: <strong id="ext-gdp">—</strong> <small>(Year: <span id="ext-gdp-year">—</span>)</small></li>
+        <li>USA Population: <strong id="ext-pop">—</strong> <small>(Year: <span id="ext-pop-year">—</span>)</small></li>
+      </ul>
     </div></div>
   </main>
 
@@ -60,5 +64,9 @@
     <span>© 2025 US States Dashboard</span>
     <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
   </footer>
+
+  <!-- Botpress -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
