--- a/charts.html
+++ b/charts.html
@@ -29,7 +29,7 @@
     </div>
   </header>
 
-  <main class="container section">
+  <main class="container section centered">
     <div class="panel"><div class="panel-inner">
       <h3 class="m0">Top 10 States by Population</h3>
       <canvas id="popChart" class="mt16" height="120"></canvas>
