--- a/create.html
+++ b/create.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <main class="container section">
+  <main class="container section centered">
     <div class="panel"><div class="panel-inner">
       <form id="create-form" class="form-grid">
         <div><label class="label">ID (USPS)</label><input class="input" name="id" placeholder="e.g., CA" required maxlength="2"/></div>
