--- a/data.html
+++ b/data.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <main class="container section">
+  <main class="container section centered">
     <div class="panel"><div class="panel-inner">
       <div class="form-grid mt8">
         <div>
