--- a/delete.html
+++ b/delete.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <main class="container section">
+  <main class="container section centered">
     <div class="panel"><div class="panel-inner">
       <label class="label" for="select-del">Choose a state to delete</label>
       <select id="select-del" class="input"></select>
