--- a/update.html
+++ b/update.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <main class="container section">
+  <main class="container section centered">
     <div class="panel"><div class="panel-inner">
       <label class="label" for="select-state">Choose a state</label>
       <select id="select-state" class="input"></select>
